[package]
name = "snowflake"
version = "0.1.0"
description = "snowflake automation program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "snowflake"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.21.0"
anchor-spl = "0.21.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
bs58 = "0.3.1"
thiserror = "1.0.20"
snow_util = { path = "../snow-util", version = "0.1.0" }